/*
Copyright 2024 Nokia.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.sdcio.config_server.apis.config.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/sdcio/config-server/apis/config/v1alpha1";

message Condition {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Condition condition = 1;
}

// A ConditionedStatus reflects the observed status of a resource. Only
// one condition of each type may exist.
message ConditionedStatus {
  // Conditions of the resource.
  // +optional
  repeated Condition conditions = 1;
}

// 	Config is the Schema for the Config API
//
// +k8s:openapi-gen=true
message Config {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigSpec spec = 2;

  optional ConfigStatus status = 3;
}

message ConfigBlob {
  // Path defines the path relative to which the value is applicable
  optional string config = 1;

  // +kubebuilder:pruning:PreserveUnknownFields
  optional k8s.io.apimachinery.pkg.runtime.RawExtension value = 2;
}

// ConfigList contains a list of Configs
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ConfigList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Config items = 2;
}

// 	ConfigSet is the Schema for the ConfigSet API
//
// +k8s:openapi-gen=true
message ConfigSet {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ConfigSetSpec spec = 2;

  optional ConfigSetStatus status = 3;
}

// ConfigSetList contains a list of ConfigSets
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ConfigSetList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated ConfigSet items = 2;
}

// ConfigSetSpec defines the desired state of Config
message ConfigSetSpec {
  // Targets defines the targets on which this configSet applies
  optional Target target = 1;

  // Lifecycle determines the lifecycle policies the resource e.g. delete is orphan or delete
  // will follow
  optional Lifecycle lifecycle = 2;

  // Priority defines the priority of this config
  optional int64 priority = 3;

  // Config defines the configuration to be applied to a target device
  // +kubebuilder:pruning:PreserveUnknownFields
  repeated ConfigBlob config = 4;
}

// ConfigSetStatus defines the observed state of Config
message ConfigSetStatus {
  // ConditionedStatus provides the status of the Readiness using conditions
  // if the condition is true the other attributes in the status are meaningful
  optional ConditionedStatus conditionedStatus = 1;

  // Targets defines the status of the configSet resource on the respective target
  repeated TargetStatus targets = 2;
}

// ConfigSpec defines the desired state of Config
message ConfigSpec {
  // Lifecycle determines the lifecycle policies the resource e.g. delete is orphan or delete
  // will follow
  optional Lifecycle lifecycle = 1;

  // Priority defines the priority of this config
  optional int64 priority = 2;

  // Config defines the configuration to be applied to a target device
  // +kubebuilder:pruning:PreserveUnknownFields
  repeated ConfigBlob config = 3;
}

// ConfigStatus defines the observed state of Config
message ConfigStatus {
  // ConditionedStatus provides the status of the Readiness using conditions
  // if the condition is true the other attributes in the status are meaningful
  optional ConditionedStatus conditionedStatus = 1;

  // LastKnownGoodSchema identifies the last known good schema used to apply the config successfully
  optional ConfigStatusLastKnownGoodSchema lastKnownGoodSchema = 2;

  // AppliedConfig defines the config applied to the target
  optional ConfigSpec appliedConfig = 3;

  // Deviations identify the configuration deviation based on the last applied config
  repeated Deviation deviations = 4;
}

message ConfigStatusLastKnownGoodSchema {
  // Schema Type
  optional string type = 1;

  // Schema Vendor
  optional string vendor = 2;

  // Schema Version
  optional string version = 3;
}

message Deviation {
  // Path of the config this deviation belongs to
  optional string path = 1;

  // DesiredValue is the desired value of the config belonging to the path
  optional string desiredValue = 2;

  // CurrentValue defines the current value of the config belonging to the path
  // that is currently configured on the target
  optional string actualValue = 3;

  // Reason defines the reason of the deviation
  optional string reason = 4;
}

message Lifecycle {
  // DeletionPolicy specifies what will happen to the underlying resource
  // when this resource is deleted - either "delete" or "orphan" the
  // resource.
  // +kubebuilder:validation:Enum=`delete`;`orphan`
  // +kubebuilder:default=delete
  optional string deletionPolicy = 1;
}

// 	RunningConfig is the Schema for the RunningConfig API
//
// +k8s:openapi-gen=true
message RunningConfig {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional RunningConfigSpec spec = 2;

  optional RunningConfigStatus status = 3;
}

// RunningConfigList contains a list of RunningConfigs
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message RunningConfigList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated RunningConfig items = 2;
}

// RunningConfigSpec defines the desired state of RunningConfig
message RunningConfigSpec {
}

// RunningConfigStatus defines the observed state of RunningConfig
message RunningConfigStatus {
  // +kubebuilder:pruning:PreserveUnknownFields
  optional k8s.io.apimachinery.pkg.runtime.RawExtension value = 2;
}

message Target {
  // TargetSelector defines the selector used to select the targets to which the config applies
  optional k8s.io.apimachinery.pkg.apis.meta.v1.LabelSelector targetSelector = 1;
}

message TargetStatus {
  optional string name = 1;

  // right now we assume the namespace of the config and target are aligned
  // NameSpace string `json:"namespace" protobuf:"bytes,2,opt,name=name"`
  // Condition of the configCR status
  optional Condition condition = 3;
}

